welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:4: error: '(' expected but identifier found.
 if isFacingTrail() == true {
    ^SlugHunting:8: error: illegal start of simple expression
}
^